--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -31,6 +31,12 @@ jobs:
     - name: Build with Maven
       run: mvn clean install
       
+    - name: Cache jar file for next job
+      uses: actions/cache@v3
+      with:
+        path: target/contactmanager-0.0.1-SNAPSHOT.jar
+        key: contactmanager-jar-${{ github.sha }}
+      
   deploy:
     needs: [build]
 
@@ -44,6 +50,14 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
+      - name: Get cache jar file
+        uses: actions/cache@v3
+        with:
+          path: target/contactmanager-0.0.1-SNAPSHOT.jar
+          key: contactmanager-jar-${{ github.sha }}
+          restore-keys: |
+            contactmanager-jar
+            
       - name: Docker build
         run: docker build --pull --no-cache --tag app .
 
