--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 server.port=${PORT:8080}
+logging.level.root=INFO
 
 spring.jpa.database=MYSQL
-spring.jpa.hibernate.ddl-auto=${HIBERNATE_DDL_AUTO:update}
+spring.jpa.hibernate.ddl-auto=${HIBERNATE_DDL_AUTO:validate}
+spring.jpa.show-sql=true
 
-spring.datasource.url=${DATASOURCE_URL:jdbc:mysql://b0702f4a77295c:ed89bec8@us-cdbr-east-06.cleardb.net/heroku_a51dbcd2830bd73?reconnect=true&createDatabaseIfNotExist=true&useTimezone=true&serverTimezone=America/Sao_Paulo}
-spring.datasource.username=${DATASOURCE_USER:b0702f4a77295c}
-spring.datasource.password=${DATASOURCE_PASS:ed89bec8}
+spring.datasource.url=${DATASOURCE_URL:jdbc:h2:mem:testdb}
+spring.datasource.username=${DATASOURCE_USER:sa}
+spring.datasource.password=${DATASOURCE_PASS:app}
 
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
